--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,16 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Sensitive configuration files
+app/config/gcp_config.json
+app/config/gcp_config_bck.json
+app/config/OpenRouter.py
+
+# Large data files
+ocr_results.json
+
+# IDE/Editor files
+*.code-workspace
+.vscode/
+.idea/
