--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,41 @@
 version: "3.8"
 
 services:
+  # PostgreSQL Database
+  postgres:
+    image: postgres:15
+    container_name: vidhan-bhavan-postgres
+    environment:
+      POSTGRES_DB: vidhan-pg
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+
+  # Redis Cache
+  redis:
+    image: redis:7-alpine
+    container_name: vidhan-bhavan-redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+
+  # Backend Application
   backend:
     build: .
     container_name: vidhan-bhavan-backend
@@ -8,9 +43,29 @@ services:
       - "8000:8000"
     volumes:
       - ./:/app
-      # Persist the SQLite DB file outside the container (optional, for dev)
-      - ./vidhan_sabha.db:/app/vidhan_sabha.db
     environment:
       - PYTHONUNBUFFERED=1
       - PYTHONDONTWRITEBYTECODE=1
+      # Database Configuration
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/vidhan-pg
+      # Redis Configuration
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_DB=0
+      # Application Configuration
+      - ENVIRONMENT=production
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     restart: unless-stopped
+
+volumes:
+  postgres_data:
+  redis_data:
