--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,35 @@
-langchain-community==0.0.10
-langchain==0.1.0
-langchain-core==0.1.0
+# Core LangChain packages with compatible versions
+langchain>=0.1.0
+langchain-core>=0.1.0
+langchain-community>=0.0.10
+
+# Google Cloud and AI services
 google-cloud-vision>=3.4.0
-Pillow>=10.0.0
-langchain-google-genai>=0.0.5
 google-generativeai>=0.8.5
-python-dotenv>=1.0.0
-pydantic>=2.0.0
-rapidfuzz>=3.0.0
+langchain-google-genai>=0.0.5
+
+# Image processing and OCR
+Pillow>=10.0.0
+pdf2image
+
+# Database and caching
 psycopg2-binary>=2.9.0
-streamlit
 sqlalchemy
 redis
-pdf2image
+
+# Web framework and utilities
 fastapi>=0.116.0
 uvicorn>=0.35.0
 werkzeug>=3.0.0
 requests>=2.31.0
+
+# Data processing and validation
+pydantic>=2.0.0
+rapidfuzz>=3.0.0
 email-validator>=2.0.0
+
+# Environment and configuration
+python-dotenv>=1.0.0
+
+# Web interface (optional)
+streamlit 
