--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 langchain>=0.1.0
 langchain-core>=0.1.0
 langchain-community>=0.0.10
+openai>=1.0.0
 
 # Google Cloud and AI services
 google-cloud-vision>=3.4.0
