--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
 version: "3.8"
 
+networks:
+  shared-network:
+    external: true
+
 services:
-  # PostgreSQL Database
   postgres:
     image: postgres:15
     container_name: vidhan-bhavan-postgres
@@ -13,6 +16,8 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - shared-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
@@ -20,7 +25,6 @@ services:
       retries: 5
     restart: unless-stopped
 
-  # Redis Cache
   redis:
     image: redis:7-alpine
     container_name: vidhan-bhavan-redis
@@ -28,6 +32,8 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    networks:
+      - shared-network
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -35,7 +41,6 @@ services:
       retries: 5
     restart: unless-stopped
 
-  # Backend Application
   backend:
     build: .
     container_name: vidhan-bhavan-backend
@@ -46,14 +51,13 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
       - PYTHONDONTWRITEBYTECODE=1
-      # Database Configuration
       - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/vidhan-pg
-      # Redis Configuration
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - REDIS_DB=0
-      # Application Configuration
       - ENVIRONMENT=production
+    networks:
+      - shared-network
     depends_on:
       postgres:
         condition: service_healthy
