--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,6 @@ services:
       POSTGRES_DB: vidhan-pg
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-    ports:
-      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
@@ -29,8 +27,6 @@ services:
   redis:
     image: redis:7-alpine
     container_name: vidhan-bhavan-redis
-    ports:
-      - "6379:6379"
     volumes:
       - redis_data:/data
     networks:
@@ -42,16 +38,16 @@ services:
       retries: 5
     restart: unless-stopped
 
-  # Backend Service (Internal - not exposed to public)
+  # Backend Service (internal only - not exposed to public)
   backend:
-    build: 
-      context: ./backend/Vidan-bhavan
+    build:
+      context: .
       dockerfile: Dockerfile
     image: vidhan-bhavan-backend:latest
     container_name: vidhan-bhavan-backend
     # No public ports exposed - only accessible within the network
     volumes:
-      - ./backend/Vidan-bhavan:/app
+      - ./:/app
     environment:
       - PYTHONUNBUFFERED=1
       - PYTHONDONTWRITEBYTECODE=1
@@ -74,28 +70,24 @@ services:
       retries: 3
     restart: unless-stopped
 
-  # Frontend Service (Exposed to public)
+  # Frontend build service (builds app and copies to shared volume)
   frontend:
     build:
-      context: ./frontend/vidhan-bhavan-insights-hub
+      context: ../vidhan-bhavan-insights-hub
       dockerfile: Dockerfile
+      args:
+        - VITE_API_URL=/api
     container_name: vidhan-bhavan-frontend
-    ports:
-      - "${FRONTEND_PORT:-3030}:80"
-      # Optional HTTPS port - uncomment if needed
-      # - "${FRONTEND_HTTPS_PORT:-8443}:443"
     environment:
-      # Set the backend API URL to use the backend container name
-      - VITE_API_URL=${VITE_API_URL:-http://vidhan-bhavan-backend:8000/api}
+      - NODE_ENV=production
     volumes:
-      # Optional: Mount custom nginx config if you need to override
-      - ./frontend/vidhan-bhavan-insights-hub/nginx.conf:/etc/nginx/nginx.conf:ro
-    restart: unless-stopped
+      - frontend_build:/usr/share/nginx/html
     networks:
       - vidhan-bhavan-network
     depends_on:
       backend:
         condition: service_healthy
+    restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "exit 0"]
       interval: 30s
@@ -108,8 +100,32 @@ services:
         max-size: "10m"
         max-file: "3"
 
+  # Public Nginx reverse proxy and static file server
+  nginx:
+    image: nginx:alpine
+    container_name: vidhan-bhavan-nginx
+    ports:
+      - "80:80"
+      # - "443:443" # Uncomment when SSL is configured
+    volumes:
+      - ../nginx.conf:/etc/nginx/nginx.conf:ro
+      - frontend_build:/usr/share/nginx/html:ro
+    depends_on:
+      backend:
+        condition: service_healthy
+      frontend:
+        condition: service_started
+    networks:
+      - vidhan-bhavan-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://localhost/ | head -n 1 >/dev/null 2>&1 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
 volumes:
   postgres_data:
   redis_data:
-  nginx_logs:
-    driver: local
+  frontend_build:
